feat: add map icon and hot court sorting by rating for customer